Added notifications support

--- a/index.html
+++ b/index.html
@@ -1,141 +1,140 @@
+<!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Hacker09 Support</title>
-		<link rel="icon" href="Imgs/BTC.png" />
-		<link rel="stylesheet" href="style.css" />
-		<link rel="preload" href="Imgs/low.gif" as="image" />
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-		<script src="https://cdn.tailwindcss.com"></script>
-	</head>
-	<body data-new-gr-c-s-check-loaded="14.1108.0" data-gr-ext-installed="">
-		<div class="container">
-			<div class="container mx-auto px-4 py-12 max-w-6xl text-center">
-				<header class="mb-12">
-					<h1 class="text-4xl md:text-5xl font-bold text-gray-800 mb-4">Hacker09 Support</h1>
-					<div class="bg-white rounded-xl shadow-md p-6 mb-8 max-w-2xl mx-auto">
-						<div class="flex flex-col sm:flex-row justify-center items-center gap-4">
-							<a href="mailto:github.com.036t8@passfwd.com" class="flex items-center text-blue-600 hover:text-blue-800 transition-colors">
-								Contact me at:&nbsp;
-								<i class="fas fa-envelope mr-2 text-xl"></i>
-								github.com.036t8@passfwd.com
-							</a>
-						</div>
-					</div>
-
-					<div class="flex flex-wrap justify-center items-end gap-4 mb-12">
-						<div class="text-center">
-							<p class="text-sm font-bold text-gray-700 mb-1">Preferable</p>
-							<a href="https://ko-fi.com/C0C6M3538" target="_blank" class="donation-btn bg-blue-500 hover:bg-blue-600 text-white px-6 py-3 rounded-lg flex items-center transition-all ring-2 ring-offset-2 ring-blue-500 shadow-lg"> <i class="fas fa-coffee mr-2 text-xl"></i> Ko-Fi </a>
-						</div>
-						<a href="https://www.patreon.com/hacker09" target="_blank" class="donation-btn bg-red-500 hover:bg-red-600 text-white px-6 py-3 rounded-lg flex items-center transition-all"> <i class="fab fa-patreon mr-2 text-xl"></i> Patreon </a>
-						<a href="https://www.buymeacoffee.com/hacker09" target="_blank" class="donation-btn bg-yellow-500 hover:bg-yellow-600 text-white px-6 py-3 rounded-lg flex items-center transition-all"> <i class="fas fa-mug-hot mr-2 text-xl"></i> BuyMeACoffee </a>
-						<a href="https://buy.stripe.com/28E28r2R9d3421q9FM9MY00" target="_blank" class="donation-btn bg-indigo-600 hover:bg-indigo-700 text-white px-6 py-3 rounded-lg flex items-center transition-all"> <img src="https://i.imgur.com/AP0gaZh.png" alt="Stripe" class="h-6 mr-2" /> Stripe </a>
-					</div>
-					<div class="text-center -mt-8 mb-12">
-						<p class="text-xs text-gray-500">* Ko-fi supports Paypal, Venmo and Debit & Credit cards</p>
-						<p class="text-xs text-gray-500">* Patreon supports PayPal, Venmo, <span class="underline decoration-dotted font-medium">Apple Pay</span> and Debit & Credit cards</p>
-						<p class="text-xs text-gray-500">* BuyMeACoffee supports <span class="underline decoration-dotted font-medium">Cash App, Bank transfers</span> and Debit & Credit cards</p>
-						<p class="text-xs text-gray-500">* Stripe supports <span class="underline decoration-dotted font-medium">Amazon Pay, Link, Affirm</span>, Cash App and Debit & Credit Cards</p>
-					</div>
-				</header>
-				<p class="text-xs text-gray-500 text-left mb-2" style="margin-top: -3rem">* Click to copy the wallet address</p>
-				<table>
-					<tbody>
-						<tr>
-							<th>Crypto</th>
-							<th>Wallet Address</th>
-						</tr>
-						<tr>
-							<td>
-								<img src="Imgs/BTC.png" title="BTC" class="crypto-icon" />
-								<p class="crypto-text">BTC</p>
-							</td>
-							<td class="wallet-address" title="Click to copy">3KoEo23zSwRPTDck2aT1ccrSFqnVWieUFS</td>
-						</tr>
-						<tr>
-							<td>
-								<img src="Imgs/BCH.png" title="BCH" class="crypto-icon" />
-								<p class="crypto-text">BCH</p>
-							</td>
-							<td class="wallet-address" title="Click to copy">3P3FzYExuNpGpXA4Dwjd2rsRLAnsDaUxTR</td>
-						</tr>
-						<tr>
-							<td>
-								<img src="Imgs/LTC.png" title="LTC" class="crypto-icon" />
-								<p class="crypto-text">LTC</p>
-							</td>
-							<td class="wallet-address" title="Click to copy">MW2qWHsAVVkUrMyE4FThCfUCY5DtrYgEyc</td>
-						</tr>
-						<tr>
-							<td>
-								<img src="Imgs/ether.svg" title="ETH" class="crypto-icon" />
-								<p class="crypto-text">ETH</p>
-							</td>
-							<td class="wallet-address" title="Click to copy">0x6BD1162a158E1758fF8A665676A17094A46D9e16</td>
-						</tr>
-						<!-- ML -->
-						<tr class="ML">
-							<td>
-								<img src="Imgs/BTC.png" title="BTC" class="crypto-icon" />
-								<p class="crypto-text">BTC</p>
-							</td>
-							<td class="wallet-address" title="Click to copy">bc1q9x3rwd53gkpnp2pxsdvd3vqqmkyy2dh627l3ft</td>
-						</tr>
-						<tr class="ML">
-							<td>
-								<img src="Imgs/LTC.png" title="LTC" class="crypto-icon" />
-								<p class="crypto-text">LTC</p>
-							</td>
-							<td class="wallet-address" title="Click to copy">ltc1qs40c7gaqwmn2ja36t2gk2nruq5ejm84rlhtzhp</td>
-						</tr>
-						<tr class="ML">
-							<td>
-								<img src="Imgs/ether.svg" title="ETH" class="crypto-icon" />
-								<p class="crypto-text">ETH</p>
-							</td>
-							<td class="wallet-address" title="Click to copy">0x2fda9dbd8F4b9C0890d2941250e7090efF2034DB</td>
-						</tr>
-						<tr class="ML">
-							<td>
-								<img src="Imgs/usdp.png" title="USDP" class="crypto-icon" />
-								<p class="crypto-text">USDP</p>
-							</td>
-							<td class="wallet-address" title="Click to copy">0xB35fE8c55B1764646E13af6aFa127f8CF629Ab3f</td>
-						</tr>
-						<tr class="ML">
-							<td>
-								<img src="Imgs/uniswap.webp" title="Uniswap" class="crypto-icon" />
-								<p class="crypto-text">Uniswap</p>
-							</td>
-							<td class="wallet-address" title="Click to copy">0x47B51D4814e8816fA2000937b7d3A79267D2e675</td>
-						</tr>
-						<tr class="ML">
-							<td>
-								<img src="Imgs/chainlink.png" title="Chainlink" class="crypto-icon" />
-								<p class="crypto-text">LINK</p>
-							</td>
-							<td class="wallet-address" title="Click to copy">0x0Dd35593f3d81b875a36a2eCA76464cC2407f24B</td>
-						</tr>
-						<!-- PM -->
-						<tr class="PM">
-							<td>
-								<img src="Imgs/BTC.png" title="BTC" class="crypto-icon" />
-								<p class="crypto-text">BTC</p>
-							</td>
-							<td class="wallet-address" title="Click to copy">bc1quay76sm5jdnqmdm4lvhcysukw9a2a8v080f8t6</td>
-						</tr>
-					</tbody>
-				</table>
-			</div>
-			<div class="copy-message" id="copyMessage" style="display: none; top: 189.463px; left: 37%">Copied!</div>
-			<div id="sfc21yux4qkrs2p7put9szj1b4u4sfzth2d" style="display: none">
-				<a href="https://www.freecounterstat.com/geozoom.php?c=21yux4qkrs2p7put9szj1b4u4sfzth2d&amp;base=counter4&amp;type_clic=0" target="_blank"><img border="0" src="https://counter4.freecounterstat.com/private/counter.php?c=21yux4qkrs2p7put9szj1b4u4sfzth2d&amp;init=1750737038782&amp;init_freecounterstat=0&amp;library=library_counters&amp;coef=1&amp;type=128&amp;lenght=4&amp;pv=0" alt="Click to see detail of visits and stats for this site" title="Click to see detail of visits and stats for this site" /></a><img style="border: none" src="https://counter4.optistats.ovh:4433/private/pointeur/pointeur.gif?|21yux4qkrs2p7put9szj1b4u4sfzth2d|851*1512|en|24|1750737039|208ffbc703407b00196ea3327a9e3d9b|computer|windows|10|chrome|137|United+States|US|40.25840|-111.65910|Provo|Google+Fiber|-21600|0|1750737034|ok|https%3A//cyber-sec0.github.io/|https%3A//greasyfork.org/|js|136.36.57.240|||&amp;init=1750737038782" border="0" width="1" height="1" />
-			</div>
-			<a href="https://www.freecounterstat.com/geozoom.php?c=&amp;base=counter4"></a>
-			<script src="https://counter4.optistats.ovh/private/counter.js?c=21yux4qkrs2p7put9szj1b4u4sfzth2d&amp;down=async" async=""></script>
-			<script src="script.js" async=""></script>
-		</div>
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Website Monitor Settings</title>
+    <link rel="icon" type="image/png" href="https://i.imgur.com/0kx5i9q.png" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <h2>Website Monitor</h2>
+      <h4>GLOBAL SETTINGS</h4>
+      <div class="form-group">
+        <div class="interval-group">
+          <div>
+            <label for="checkIntervalHoursInput" class="label-with-icon">
+              <span>Hours</span>
+              <span class="help-icon" title="Set the hours to wait between checks.">?</span>
+            </label>
+            <input type="number" id="checkIntervalHoursInput" min="0" value="0" />
+          </div>
+          <div>
+            <label for="checkIntervalMinutesInput" class="label-with-icon">
+              <span>Minutes</span>
+              <span class="help-icon" title="Set the minutes to wait between checks. Minimum total is 1 minute.">?</span>
+            </label>
+            <input type="number" id="checkIntervalMinutesInput" min="0" value="1" />
+          </div>
+        </div>
+        <button id="saveSettingsBtn">Save Global Settings</button>
+      </div>
+      <div class="header-with-button">
+        <h3>ADD</h3>
+        <button id="toggleFormBtn" title="Add new site">+</button>
+      </div>
+      <div id="formContainer" class="form-group hidden">
+        <h3 id="formTitle">Add New Site or Endpoint</h3>
+        <label class="label-with-icon">
+          <span>Name</span>
+          <span class="help-icon" title="A nickname for this entry, for your reference.">?</span>
+        </label>
+        <input type="text" id="nameInput" placeholder="Ex: Movies 2024" />
+        <label class="label-with-icon">
+          <span>Endpoint URL</span>
+          <span class="help-icon" title="The specific URL the script will request to check for changes.">?</span>
+        </label>
+        <input type="text" id="urlInput" placeholder="URL to check for changes" />
+        <label class="label-with-icon">
+          <span>Website to Open (Optional)</span>
+          <span class="help-icon" title="If a change is detected, this URL will be opened. If blank, the Endpoint URL is used.">?</span>
+        </label>
+        <input type="text" id="websiteInput" placeholder="URL to open when a change occurs" />
+        <label class="label-with-icon">
+          <span>Comparison Method</span>
+          <span class="help-icon" title="Choose how the script should detect changes.">?</span>
+        </label>
+        <select id="comparisonMethodInput">
+          <option value="text">Text Content (ignores HTML tags)</option>
+          <option value="order">Element Order (for lists)</option>
+          <option value="new_items">New Items Only (in a list)</option>
+        </select>
+        <div id="listFields" class="hidden">
+          <label class="label-with-icon">
+            <span>CSS Selector for List Items</span>
+            <span class="help-icon" title="A CSS selector to find all items in a list (e.g., 'li.post'). Required for list-based comparisons.">?</span>
+          </label>
+          <input type="text" id="selectorInput" placeholder="Ex: .post or li[data-script-id]" />
+          <label class="label-with-icon">
+            <span>Unique ID Attribute</span>
+            <span class="help-icon" title="An attribute on each list item that holds a unique ID (e.g., 'id', 'data-id', 'href' or even 'innerText'). Required for list-based comparisons.">?</span>
+          </label>
+          <input type="text" id="idAttributeInput" placeholder="Ex: data-script-id or id" />
+        </div>
+        <hr />
+        <div class="label-with-icon">
+          <input type="checkbox" id="notificationCheckbox" style="width: auto; margin-right: 8px; margin-top: 19px;" />
+          <label for="notificationCheckbox">Show content difference in notification</label>
+          <span class="help-icon" title="If checked, a browser notification will appear showing the difference.">?</span>
+        </div>
+        <div class="label-with-icon">
+          <input type="checkbox" id="tokenEnabledCheckbox" style="width: auto; margin-right: 8px; margin-top: 19px;" />
+          <label for="tokenEnabledCheckbox">Enable Dynamic Token Fetching</label>
+          <span class="help-icon" title="Check this for sites that use temporary security tokens (nonces) that expire.">?</span>
+        </div>
+        <div id="tokenFields" class="hidden">
+          <h4>Dynamic Token Settings</h4>
+          <label class="label-with-icon">
+            <span>Token Fetch URL</span>
+            <span class="help-icon" title="The URL of the page where the script can find a fresh token.">?</span>
+          </label>
+          <input type="text" id="tokenUrlInput" placeholder="Page containing the token" />
+          <label class="label-with-icon">
+            <span>Token CSS Selector</span>
+            <span class="help-icon" title="The CSS selector to find the element containing the token on the fetch URL (e.g., 'script').">?</span>
+          </label>
+          <input type="text" id="tokenSelectorInput" placeholder="e.g., input[name=nonce] or script" />
+          <label class="label-with-icon">
+            <span>Token Regular Expression (Optional)</span>
+            <span class="help-icon" title="Use a RegEx to extract the token from the element's text content. The first capturing group ( ) will be used as the token.">?</span>
+          </label>
+          <input type="text" id="tokenRegExInput" placeholder='"nonce":"([a-z0-9]+)"' />
+          <label class="label-with-icon">
+            <span>Token Attribute (Optional)</span>
+            <span class="help-icon" title="The attribute of the token element to read (e.g., 'value'). This is ignored if a RegEx is provided.">?</span>
+          </label>
+          <input type="text" id="tokenAttributeInput" placeholder="e.g., value." />
+          <label class="label-with-icon">
+            <span>Placeholder in Body/Headers</span>
+            <span class="help-icon" title="A unique placeholder (e.g., %%NONCE%%) in your saved Body/Headers that will be replaced with the fresh token.">?</span>
+          </label>
+          <input type="text" id="tokenPlaceholderInput" placeholder="e.g., %%NONCE%%" />
+        </div>
+        <hr />
+        <label class="label-with-icon">
+          <span>Headers (Optional)</span>
+          <span class="help-icon" title="Request headers in JSON format. Needed for some POST requests.">?</span>
+        </label>
+        <textarea id="headersInput" placeholder='{ "accept": "*/*", "content-type": "application/x-www-form-urlencoded" }'></textarea>
+        <label class="label-with-icon">
+          <span>Body (Optional)</span>
+          <span class="help-icon" title="Request body data. Providing this will make the request a POST.">?</span>
+        </label>
+        <textarea id="bodyInput" placeholder="action=search&value=some_data"></textarea>
+        <div class="button-group">
+          <button id="addBtn">Add Site</button>
+        </div>
+      </div>
+      <h3>Monitored Sites</h3>
+      <ul id="sitesList"></ul>
+      <div id="pausedSection">
+        <details>
+          <summary>Paused Sites</summary>
+          <ul id="pausedSitesList"></ul>
+        </details>
+      </div>
+    </div>
+    <script src="script.js"></script>
+  </body>
 </html>
