Update notification type options with descriptive text for clarity

--- a/monitor/index.html
+++ b/monitor/index.html
@@ -79,8 +79,8 @@
         </label>
         <select id="notificationTypeInput">
           <option value="">Disabled</option>
-          <option value="show">Show Content</option>
-          <option value="copy">Click to Copy Changes (Clipboard)</option>
+          <option value="show">Show Content (For small texts/changes)</option>
+          <option value="copy">Click to Copy Changes to Clipboard (For long texts/changes)</option>
         </select>
         <div class="label-with-icon">
           <input type="checkbox" id="tokenEnabledCheckbox" style="width: auto; margin-right: 8px; margin-top: 19px;" />
